third_party/rust/codespan_reporting/v0_11/crate/tests/snapshots/term__same_ranges__rich_no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&config)
---
error: Unexpected token
  ┌─ same_range:1:5
  │
1 │ ::S { }
  │     ^
  │     │
  │     Unexpected '{'
  │     Expected '('


